<resources>
    <string name="app_name">Stronk</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="edit_message">Youtube Link</string>
    <string name="save">Save</string>
    <string name="video_links">Video Links</string>
    <string name="save_name">Save Name</string>
    <string name="line_1">Line 1</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="title_activity_calorie_counter">CalorieCounter</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="meals">Meals</string>
    <string name="meal">Meal</string>
    <string name="calories">Calories</string>
    <string name="total">Total:</string>
    <string name="_0">0</string>
    <string name="reset">Reset</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>

</resources>
